--- a/Web Development/Learning/HTML/Exercises/HTML-CSS-BootStrap(flexbox)/Pattern/index.html
+++ b/Web Development/Learning/HTML/Exercises/HTML-CSS-BootStrap(flexbox)/Pattern/index.html
@@ -4,16 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-        crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
-        crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
-
+    crossorigin="anonymous">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
+    crossorigin="anonymous">
         <style>
             .jumbotron{
                 text-align: center;
@@ -23,57 +16,56 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="navbar bg-dark navbar-dark">
+    <nav class="navbar bg-dark navbar-dark">
         <div class="container">
-            <a href="#" class="navbar-brand"><i class="fas fa-binoculars mr-2"></i> Pattern</a>
+            <a href="#" class="navbar-brand"><i class="fas fa-binoculars"></i> Pattern</a>
         </div>
-    </div>
-    <div class="jumbotron">
-        <h1 class="header display-3">PATTERN</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores, pariatur?</p>
-        <a href="#" class="btn btn-primary">Do Something</a>
-        <a href="#" class="btn btn-success">Another Thing</a>
-    </div>
-
-    <section id='gallery'>
+    </nav>
+    <div class="container">
+        <div class="jumbotron">
+            <h5 class="display-4">Pattern</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, quaerat odio sed voluptatum eos.</p>
+            <a href="#" class="btn btn-primary">Do that</a>
+            <a href="#" class="btn btn-success">Smt else</a>
+        </div>
         <div class="container">
-            <div class="row"> 
-                <div class="col-lg-4 col-sm-12 mb-4">
+            <div class="row">
+                <div class="col-lg-4">
                     <div class="card">
-                        <img class='card-img-top' src="imgs/pattern1.jpeg" alt="">
+                        <img src="./imgs/pattern1.jpeg" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">First thing</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid nam magnam facilis dolores quos ipsam?</p>
-                            <a href="#" class="btn btn-outline-success btn-small">Download</a>
-                            <a href="#" class="btn btn-outline-danger btn-small"><i class="far fa-heart"></i></a>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, quaerat odio sed voluptatum eos.</p>
+                            <a href="#" class="btn btn-outline-success">Download</a>
+                            <a href="#" class="btn btn-outline-danger"><i class="far fa-heart"></i></a>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-12 mb-4">
+                <div class="col-lg-4">
                     <div class="card">
-                        <img src="imgs/pattern2.jpeg"class='card-img-top' alt="">
+                        <img src="./imgs/pattern2.jpeg" class="card-img-top">
                         <div class="card-body">
-                            <h5 class="card-title">Second Thing</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid nam magnam facilis dolores quos ipsam?</p>
-                            <a href="#" class="btn btn-outline-success btn-small">Download</a>
-                            <a href="#" class="btn btn-outline-danger btn-small"><i class="far fa-heart"></i></a>
+                            <h5 class="card-title">Second thing</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, quaerat odio sed voluptatum eos.</p>
+                            <a href="#" class="btn btn-outline-success">Download</a>
+                            <a href="#" class="btn btn-outline-danger"><i class="far fa-heart"></i></a>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-12 mb-4">
+                <div class="col-lg-4">
                     <div class="card">
-                        <img src="imgs/pattern3.jpeg"class='card-img-top' alt="">
+                        <img src="./imgs/pattern3.jpeg" class="card-img-top">
                         <div class="card-body">
-                            <h5 class="card-title">Second Thing</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid nam magnam facilis dolores quos ipsam?</p>
-                            <a href="#" class="btn btn-outline-success btn-small">Download</a>
-                            <a href="#" class="btn btn-outline-danger btn-small"><i class="far fa-heart"></i></a>
+                            <h5 class="card-title">Third Thing</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, quaerat odio sed voluptatum eos.</p>
+                            <a href="#" class="btn btn-outline-success">Download</a>
+                            <a href="#" class="btn btn-outline-danger"><i class="far fa-heart"></i></a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
    
 </body>
 </html>
